--- a/assets/app.css
+++ b/assets/app.css
@@ -607,6 +607,24 @@ video {
   --tw-backdrop-sepia: ;
 }
 
+.tw-col-span-10 {
+  grid-column: span 10 / span 10;
+}
+
+.tw-col-span-2 {
+  grid-column: span 2 / span 2;
+}
+
+.tw-mx-64 {
+  margin-left: 16rem;
+  margin-right: 16rem;
+}
+
+.tw-mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .tw-mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -653,6 +671,11 @@ video {
   height: 2rem;
 }
 
+.tw-size-20 {
+  width: 5rem;
+  height: 5rem;
+}
+
 .tw-h-full {
   height: 100%;
 }
@@ -685,6 +708,18 @@ video {
   width: 100px;
 }
 
+.tw-w-\[800px\] {
+  width: 800px;
+}
+
+.tw-max-w-\[50vw\] {
+  max-width: 50vw;
+}
+
+.tw-max-w-\[960px\] {
+  max-width: 960px;
+}
+
 .tw-shrink-0 {
   flex-shrink: 0;
 }
@@ -699,6 +734,10 @@ video {
 
 .tw-grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.tw-grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .tw-grid-rows-3 {
@@ -737,6 +776,10 @@ video {
   gap: 1.5rem;
 }
 
+.tw-gap-8 {
+  gap: 2rem;
+}
+
 .tw-self-start {
   align-self: flex-start;
 }
@@ -755,6 +798,14 @@ video {
 
 .tw-rounded-md {
   border-radius: 0.375rem;
+}
+
+.tw-rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.tw-rounded {
+  border-radius: 0.25rem;
 }
 
 .tw-border {
@@ -830,6 +881,10 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.tw-text-center {
+  text-align: center;
+}
+
 .tw-text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -845,8 +900,17 @@ video {
   line-height: 1.75rem;
 }
 
+.tw-text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .tw-font-medium {
   font-weight: 500;
+}
+
+.tw-font-bold {
+  font-weight: 700;
 }
 
 .tw-uppercase {
