--- a/sections/sample-scan.liquid
+++ b/sections/sample-scan.liquid
@@ -1,3 +1,6 @@
+{{ 'section-rich-text.css' | asset_url | stylesheet_tag }}
+
+
 {%- style -%}
   .section-{{ section.id }}-padding {
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
@@ -19,67 +22,144 @@
 -%}
 
 <div class="isolate{% unless section.settings.full_width %} page-width{% endunless %} section-{{ section.id }}-padding">
-  {{ section.settings.title }}
-  <swiper-container
-    id="main-swiper"
-    thumbs-swiper="#thumbs-swiper"
-    css-mode="true">
-    {%- if image1 != null -%}
-      <swiper-slide>
-        <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2]">
-          <img
-            srcset="{{ image1 | image_url: width: 800 }} 1x, {{ image1 | image_url: width: 3840 }} 4x"
-            sizes="100px"
-            class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-        </div>
-      </swiper-slide>
-    {%- endif -%}
-    {%- if image2 != null -%}
-      <swiper-slide lazy="true">
-        <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2]">
-          <img
-            srcset="{{ image2 | image_url: width: 800 }} 1x, {{ image2 | image_url: width: 3840 }} 4x"
-            sizes="100px"
-            loading="lazy"
-            class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-        </div>
-      </swiper-slide>
-    {%- endif -%}
-    {%- if image3 != null -%}
-      <swiper-slide lazy="true">
-        <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2]">
-          <img
-            srcset="{{ image3 | image_url: width: 800 }} 1x, {{ image3 | image_url: width: 3840 }} 4x"
-            sizes="100px"
-            loading="lazy"
-            class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-        </div>
-      </swiper-slide>
-    {%- endif -%}
-  </swiper-container>
-  <swiper-container
-    id="thumbs-swiper"
-    space-between="10"
-    slides-per-view="4"
-    free-mode="true"
-    watch-slides-progress="true"
-    css-mode="true">
-    {%- if image1 != null -%}
-      <swiper-slide>
-        <img srcset="{{ image1 | image_url: width: 100 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-      </swiper-slide>
-    {%- endif -%}
-    {%- if image2 != null -%}
-      <swiper-slide>
-        <img srcset="{{ image2  | image_url: width: 100 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-      </swiper-slide>
-    {%- endif -%}
-    {%- if image3 != null -%}
-      <swiper-slide>
-        <img srcset="{{ image3 | image_url: width: 100 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
-      </swiper-slide>
-    {%- endif -%}
-  </swiper-container>
+  <div class="rich-text__blocks tw-w-full tw-mx-auto {{ section.settings.content_alignment }}">
+    {%- for block in section.blocks -%}
+      {%- case block.type -%}
+        {%- when 'heading' -%}
+          <h2
+            class="rich-text__heading rte inline-richtext {{ block.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+            {{ block.shopify_attributes }}
+            {% if settings.animations_reveal_on_scroll %}
+            data-cascade
+            style="--animation-order: {{ forloop.index }};"
+            {% endif %}>
+            {{ block.settings.heading }}
+          </h2>
+        {%- when 'caption' -%}
+          <p
+            class="rich-text__caption {{ block.settings.text_style }} {{ block.settings.text_style }}--{{ block.settings.text_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+            {{ block.shopify_attributes }}
+            {% if settings.animations_reveal_on_scroll %}
+            data-cascade
+            style="--animation-order: {{ forloop.index }};"
+            {% endif %}>
+            {{ block.settings.caption | escape }}
+          </p>
+        {%- when 'text' -%}
+          <div
+            class="rich-text__text rte{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+            {{ block.shopify_attributes }}
+            {% if settings.animations_reveal_on_scroll %}
+            data-cascade
+            style="--animation-order: {{ forloop.index }};"
+            {% endif %}>
+            {{ block.settings.text }}
+          </div>
+        {%- when 'button' -%}
+          <div
+            class="rich-text__buttons{% if block.settings.button_label != blank and block.settings.button_label_2 != blank %} rich-text__buttons--multiple{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+            {{ block.shopify_attributes }}
+            {% if settings.animations_reveal_on_scroll %}
+            data-cascade
+            style="--animation-order: {{ forloop.index }};"
+            {% endif %}>
+            {%- if block.settings.button_label != blank -%}
+              <a
+                {% if block.settings.button_link == blank %}
+                role="link"
+                aria-disabled="true"
+                {% else %}
+                href="{{ block.settings.button_link }}"
+                {% endif %}
+                class="button{% if block.settings.button_style_secondary %} button--secondary{% else %} button--primary{% endif %}">
+                {{- block.settings.button_label | escape -}}
+              </a>
+            {%- endif -%}
+            {%- if block.settings.button_label_2 != blank -%}
+              <a
+                {% if block.settings.button_link_2 == blank %}
+                role="link"
+                aria-disabled="true"
+                {% else %}
+                href="{{ block.settings.button_link_2 }}"
+                {% endif %}
+                class="button{% if block.settings.button_style_secondary_2 %} button--secondary{% else %} button--primary{% endif %}">
+                {{- block.settings.button_label_2 | escape -}}
+              </a>
+            {%- endif -%}
+          </div>
+        {%- when 'images' - %}
+          <div class="tw-w-full tw-max-w-[960px] tw-grid tw-grid-cols-12 tw-gap-8">
+            <swiper-container
+              id="thumbs-swiper"
+              direction="vertical"
+              space-between="32"
+              slides-per-view="3"
+              free-mode="true"
+              watch-slides-progress="true"
+              class="tw-col-span-2 {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+              css-mode="true">
+              {%- if block.settings.sample_scan_1 != null -%}
+                <swiper-slide>
+                  <img srcset="{{ block.settings.sample_scan_1 | image_url: width: 400 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                </swiper-slide>
+              {%- endif -%}
+              {%- if block.settings.sample_scan_2 != null -%}
+                <swiper-slide>
+                  <img srcset="{{ block.settings.sample_scan_2  | image_url: width: 400 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                </swiper-slide>
+              {%- endif -%}
+              {%- if block.settings.sample_scan_3 != null -%}
+                <swiper-slide>
+                  <img srcset="{{ block.settings.sample_scan_3 | image_url: width: 400 }} 1x" class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                </swiper-slide>
+              {%- endif -%}
+            </swiper-container>
+            <swiper-container
+              id="main-swiper"
+              thumbs-swiper="#thumbs-swiper"
+              class="tw-rounded tw-overflow-hidden tw-col-span-10 tw-aspect-[3/2]"
+              direction="vertical"
+              css-mode="true">
+              {%- if block.settings.sample_scan_1 != null -%}
+                <swiper-slide class="h-64">
+                  <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2] {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+                    <img
+                      srcset="{{ block.settings.sample_scan_1 | image_url: width: 800 }} 1x, {{ block.settings.sample_scan_1 | image_url: width: 3840 }} 4x"
+                      sizes="100px"
+                      class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                  </div>
+                </swiper-slide>
+              {%- endif -%}
+              {%- if block.settings.sample_scan_2 != null -%}
+                <swiper-slide class="h-64" lazy="true">
+                  <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2] {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+                    <img
+                      srcset="{{ block.settings.sample_scan_2 | image_url: width: 800 }} 1x, {{ block.settings.sample_scan_2 | image_url: width: 3840 }} 4x"
+                      sizes="100px"
+                      loading="lazy"
+                      class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                  </div>
+                </swiper-slide>
+              {%- endif -%}
+              {%- if block.settings.sample_scan_3 != null -%}
+                <swiper-slide class="h-64" lazy="true">
+                  <div class="scan-zoom-container tw-overflow-hidden tw-w-full tw-aspect-[3/2] {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
+                    <img
+                      srcset="{{ block.settings.sample_scan_3 | image_url: width: 800 }} 1x, {{ block.settings.sample_scan_3 | image_url: width: 3840 }} 4x"
+                      sizes="100px"
+                      loading="lazy"
+                      class="tw-origin-center tw-object-cover tw-w-full tw-h-full" />
+                  </div>
+                </swiper-slide>
+              {%- endif -%}
+            </swiper-container>
+          </div>
+      {%- endcase -%}
+    {%- endfor -%}
+  </div>
+
+
 </div>
 
 <style>
@@ -90,6 +170,16 @@
 
   .scan-zoom-container > img.zoomed-in {
     cursor: zoom-out
+  }
+
+  #thumbs-swiper swiper-slide {
+    opacity: 0.4;
+    border-radius: 0.25rem;
+    overflow: hidden;
+  }
+
+  #thumbs-swiper .swiper-slide-thumb-active {
+    opacity: 1;
   }
 </style>
 
@@ -206,34 +296,25 @@
     },
     "settings": [
       {
-        "type": "text",
-        "id": "title",
-        "default": "Title",
-        "label": "Scan sample title"
+        "type": "select",
+        "id": "content_alignment",
+        "options": [
+          {
+            "value": "left",
+            "label": "t:sections.rich-text.settings.content_alignment.options__1.label"
+          },
+          {
+            "value": "center",
+            "label": "t:sections.rich-text.settings.content_alignment.options__2.label"
+          },
+          {
+            "value": "right",
+            "label": "t:sections.rich-text.settings.content_alignment.options__3.label"
+          }
+        ],
+        "default": "center",
+        "label": "t:sections.rich-text.settings.content_alignment.label"
       },
-
-      {
-        "type": "image_picker",
-        "id": "sample_scan_1",
-        "label": "Sample scan 1"
-      },
-      {
-        "type": "image_picker",
-        "id": "sample_scan_2",
-        "label": "Sample scan 2"
-      },
-      {
-        "type": "image_picker",
-        "id": "sample_scan_3",
-        "label": "Sample scan 3"
-      },
-      {
-        "type": "text",
-        "id": "description",
-        "label": "Sample scan description",
-        "info": "something something"
-      },
-
       {
         "type": "range",
         "id": "padding_top",
@@ -255,12 +336,175 @@
         "default": 36
       }
     ],
+    "blocks": [
+      {
+        "type": "images",
+        "name": "images",
+        "limit": 1,
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "sample_scan_1",
+            "label": "Sample scan 1"
+          },
+          {
+            "type": "image_picker",
+            "id": "sample_scan_2",
+            "label": "Sample scan 2"
+          },
+          {
+            "type": "image_picker",
+            "id": "sample_scan_3",
+            "label": "Sample scan 3"
+          }
+        ]
+      },
+      {
+        "type": "heading",
+        "name": "t:sections.rich-text.blocks.heading.name",
+        "limit": 3,
+        "settings": [
+          {
+            "type": "inline_richtext",
+            "id": "heading",
+            "default": "Talk about your brand",
+            "label": "t:sections.rich-text.blocks.heading.settings.heading.label"
+          },
+          {
+            "type": "select",
+            "id": "heading_size",
+            "options": [
+              {
+                "value": "h2",
+                "label": "t:sections.all.heading_size.options__1.label"
+              },
+              {
+                "value": "h1",
+                "label": "t:sections.all.heading_size.options__2.label"
+              },
+              {
+                "value": "h0",
+                "label": "t:sections.all.heading_size.options__3.label"
+              },
+              {
+                "value": "hxl",
+                "label": "t:sections.all.heading_size.options__4.label"
+              }
+            ],
+            "default": "h1",
+            "label": "t:sections.all.heading_size.label"
+          }
+        ]
+      },
+      {
+        "type": "caption",
+        "name": "t:sections.rich-text.blocks.caption.name",
+        "limit": 3,
+        "settings": [
+          {
+            "type": "text",
+            "id": "caption",
+            "default": "Add a tagline",
+            "label": "t:sections.rich-text.blocks.caption.settings.text.label"
+          },
+          {
+            "type": "select",
+            "id": "text_style",
+            "options": [
+              {
+                "value": "subtitle",
+                "label": "t:sections.rich-text.blocks.caption.settings.text_style.options__1.label"
+              },
+              {
+                "value": "caption-with-letter-spacing",
+                "label": "t:sections.rich-text.blocks.caption.settings.text_style.options__2.label"
+              }
+            ],
+            "default": "caption-with-letter-spacing",
+            "label": "t:sections.rich-text.blocks.caption.settings.text_style.label"
+          },
+          {
+            "type": "select",
+            "id": "text_size",
+            "options": [
+              {
+                "value": "small",
+                "label": "t:sections.rich-text.blocks.caption.settings.caption_size.options__1.label"
+              },
+              {
+                "value": "medium",
+                "label": "t:sections.rich-text.blocks.caption.settings.caption_size.options__2.label"
+              },
+              {
+                "value": "large",
+                "label": "t:sections.rich-text.blocks.caption.settings.caption_size.options__3.label"
+              }
+            ],
+            "default": "medium",
+            "label": "t:sections.rich-text.blocks.caption.settings.caption_size.label"
+          }
+        ]
+      },
+      {
+        "type": "text",
+        "name": "t:sections.rich-text.blocks.text.name",
+        "limit": 3,
+        "settings": [
+          {
+            "type": "richtext",
+            "id": "text",
+            "default": "<p>Share information about your brand with your customers. Describe a product, make announcements, or welcome customers to your store.</p>",
+            "label": "t:sections.rich-text.blocks.text.settings.text.label"
+          }
+        ]
+      },
+      {
+        "type": "button",
+        "name": "t:sections.rich-text.blocks.buttons.name",
+        "limit": 2,
+        "settings": [
+          {
+            "type": "text",
+            "id": "button_label",
+            "default": "Button label",
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_label_1.label",
+            "info": "t:sections.rich-text.blocks.buttons.settings.button_label_1.info"
+          },
+          {
+            "type": "url",
+            "id": "button_link",
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_link_1.label"
+          },
+          {
+            "type": "checkbox",
+            "id": "button_style_secondary",
+            "default": false,
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_style_secondary_1.label"
+          },
+          {
+            "type": "text",
+            "id": "button_label_2",
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_label_2.label",
+            "info": "t:sections.rich-text.blocks.buttons.settings.button_label_2.info"
+          },
+          {
+            "type": "url",
+            "id": "button_link_2",
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_link_2.label"
+          },
+          {
+            "type": "checkbox",
+            "id": "button_style_secondary_2",
+            "default": false,
+            "label": "t:sections.rich-text.blocks.buttons.settings.button_style_secondary_2.label"
+          }
+        ]
+      }
+    ],
     "presets": [
       {
         "name": "Sample scan",
-        "settings": {
-          "title": "gowno"
-        }
+        "settings": {}
       }
     ]
   }
